# data-science-stack

./: .gitignore  CONTRIBUTING.md  README.md  kubeconfig  pyproject.toml  requirements-fmt.txt  requirements-integration.txt  requirements-lint.in  requirements-lint.txt  requirements-test.txt  requirements-unit.in  requirements-unit.txt  requirements.in  requirements.txt  setup.cfg  snapcraft.yaml  tox.ini
.github/: concierge.yaml
.github/workflows/: aws-integration-gpu.yaml  aws-snap-integration-gpu.yaml  build_and_test_snap.yaml  configure_microk8s.sh  gh-release.yaml  on_pull_request_or_push.yaml  publish.yaml  setup-environment.sh  setup-gpu-environment.sh  setup-gpu.sh  setup_environment.sh  setup_microk8s.sh  sphinx-python-dependency-build-checks.yml  tests.yaml
docs/: .custom_wordlist.txt  .readthedocs.yaml  .wordlist.txt  Makefile  conf.py  custom_conf.py  index.rst
docs/.sphinx/: build_requirements.py
docs/explanation/: dss-arch.rst  dss-artefacts.rst  index.rst
docs/how-to/: dss.rst  enable-gpu.rst  enable-intel-gpu.rst  enable-nvidia-gpu.rst  index.rst  intel-gpu-computation.rst  jupyter-notebook.rst  list-commands.rst  mlflow.rst
docs/reference/: enable-gpu.rst  index.rst  minimum-requirements.rst
docs/reuse/: .#links.txt  links.txt
docs/tutorial/: get-started.rst  getting-started.rst  getting-started.tex  index.rst  installation.rst
poc/: README.md  deploy.sh  nvidia-drivers.sh
poc/common-manifests/: mlflow.yaml  notebooks.yaml
poc/intel/: README.md  cleanup.sh  deploy.sh
poc/manifests/: notebooks.yaml
snap/: snapcraft.yaml
(+77 files in other folders)
