[metadata]
name = dss
version = 0.1

[options]
package_dir =
    = src
packages = find:
install_requires =
    charmed-kubeflow-chisme
    Click
    lightkube
include_package_data = True

[options.package_data]
dss = manifest_templates/*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dss = dss.main:main
